added default options to ReCaptchaHost
  * added option for visible/invisible reCAPTCHAs
  * the constructor now accepts default options, that are inserted when they
    are missing in setOptions()
  * ReCaptchaHost uses Google's testing site key by default

--- a/app/public/recaptcha.html
+++ b/app/public/recaptcha.html
@@ -12,9 +12,8 @@
 	<body>
 		<div id="main">
 			<div class="g-recaptcha" data-badge="inline"
-				data-sitekey="<!-- sitekey xml -->"
-				data-callback="grecaptchaOnSubmit"
-				data-size="invisible"></div>
+				<!-- recaptcha config -->
+				data-callback="grecaptchaOnSubmit"></div>
 		</div>
 	</body>
 </html>
