--- a/decaptcha/recaptcha.html
+++ b/decaptcha/recaptcha.html
@@ -4,13 +4,11 @@
 		<meta charset="utf-8">
 		<style>{css}</style>
 		<script>{js}</script>
-		<script src="https://www.recaptcha.net/recaptcha/api.js?onload=grecaptchaOnLoad" async="yes" defer="yes"></script>
+		<script src="{api}?onload=onLoad" async="yes" defer="yes"></script>
 	</head>
 	<body>
 		<div id="main">
-			<div class="g-recaptcha" data-badge="inline"
-				{options}
-				data-callback="grecaptchaOnSubmit"></div>
+			<div {attrs}></div>
 		</div>
 	</body>
 </html>
